// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutboundLink should render with all props assigned 1`] = `
<a
  className="test-class"
  href="https://tests.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  Test
</a>
`;

exports[`OutboundLink should render with required props 1`] = `
<a
  className=""
  href="https://tests.com"
  rel="noopener noreferrer"
  target="_blank"
>
  <span
    className="screenReaderOnly"
  >
    Opens in new window
  </span>
  Test
  <test-file-mock
    className="externalLinkIcon"
  />
</a>
`;
